--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    :root {
+      --text: #040316;
+      --background: #fbfbfe;
+      --primary: #2f27ce;
+      --secondary: #dddbff;
+      --accent: #443dff;
+    }
+    .dark {
+      --text: #eae9fc;
+      --background: #010104;
+      --primary: #3a31d8;
+      --secondary: #020024;
+      --accent: #0600c2;
+    }
+  }
+  
+/* ~~~~~~~~~~~~~~~~~~ Typography ~~~~~~~~~~~~~~~~~~~~ */
+/* HEX */
+/* colors: {
+    'text': '#eae9fc',
+    'background': '#010104',
+    'primary': '#3a31d8',
+    'secondary': '#020024',
+    'accent': '#0600c2',
+   }, */
